Fix small layout issue

--- a/src/main/resources/static/style/app/styles.css
+++ b/src/main/resources/static/style/app/styles.css
@@ -136,6 +136,7 @@ body {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 1) !important;
     top: -1rem;
     bottom: 1rem;
+    margin-top: 1rem;
     margin-right: 1rem;
     margin-left: 1rem;
 }
